gts-macros/tests/compile_fail/unit_struct.stderr
error: struct_to_gts_schema: Only structs with named fields are supported
  --> tests/compile_fail/unit_struct.rs:12:12
   |
12 | pub struct Empty;
   |            ^^^^^
